atualiza configuração do package.json

--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
   "engines": {
     "node": ">=22.0.0"
   },
-  "homepage": "https://github.com/janamirelly/react-todo-list.git"
+  "homepage": "https://janamirelly.github.io/react-todo-list/"
 }
